ames/pds_web/test-data/volumes/bad/index/index.tab
"data/spectrumtable.lbl            ","ASTEROID         ","ASTEROID","spectrumtable.tab    ","SPECTRUMTABLE_TAB            ","2002-11-09      ","2005-01-19","OBS056T9","EUROPEAN SOUTHERN OBSERVATORY NEW TECHNOLOGY TELESCOPE (NTT)","EMMI","ESO MULTIMODE INSTRUMENT","{ FORNASIERETAL2007, FORNASIERETAL2004 }"
"CATALOG/DATASET.CAT               ","ASTEROID         ","ASTEROID","spectrumtable.tab    ","SPECTRUMTABLE_TAB            ","2002-11-09      ","2005-01-19","OBS056T9","EUROPEAN SOUTHERN OBSERVATORY NEW TECHNOLOGY TELESCOPE (NTT)","EMMI","ESO MULTIMODE INSTRUMENT","{ FORNASIERETAL2007, FORNASIERETAL2004 }"
"regression/DATE_TEST.CAT          ","ASTEROID         ","ASTEROID","spectrumtable.tab    ","SPECTRUMTABLE_TAB            ","2002-11-09      ","2005-01-19","OBS056T9","EUROPEAN SOUTHERN OBSERVATORY NEW TECHNOLOGY TELESCOPE (NTT)","EMMI","ESO MULTIMODE INSTRUMENT","{ FORNASIERETAL2007, FORNASIERETAL2004 }"
"regression/DICT_COLLISION.CAT     ","ASTEROID         ","ASTEROID","spectrumtable.tab    ","SPECTRUMTABLE_TAB            ","2002-11-09      ","2005-01-19","OBS056T9","EUROPEAN SOUTHERN OBSERVATORY NEW TECHNOLOGY TELESCOPE (NTT)","EMMI","ESO MULTIMODE INSTRUMENT","{ FORNASIERETAL2007, FORNASIERETAL2004 }"
"regression/MAG96133.LBL           ","ASTEROID         ","ASTEROID","spectrumtable.tab    ","SPECTRUMTABLE_TAB            ","2002-11-09      ","2005-01-19","OBS056T9","EUROPEAN SOUTHERN OBSERVATORY NEW TECHNOLOGY TELESCOPE (NTT)","EMMI","ESO MULTIMODE INSTRUMENT","{ FORNASIERETAL2007, FORNASIERETAL2004 }"
"data/attachedBlankFill.lbl        "
"data/attachedBlankFillInvalid.lbl "
"data/attachedBlankFllNoPointer.lbl"
"data/attachedBlankFillWWhite.lbl  "
"data/attachedPadded.lbl           "
"data/attachedPaddedInvalid.lbl    "
"data/attachedPaddedWWhite.lbl     "
"data/attachedStream.lbl           "
"data/badLineEnding.lbl            "
"data/pointer.lbl                  "